--- a/index.html
+++ b/index.html
@@ -1,10 +1,28 @@
-gdsf
+<!DOCTYPE html>
 
-fdgfs
+<html>
+
+	<head>
+		<link rel="stylesheet" href="/Users/joshstone/git-101/style.css">
+	</head>
+
+​		<body>
+
+​		<img id = "logo" src="Screenshot1.png" alt="Description of the image">
+
+			<h1>Coming soon... Le Wagon</h1>
+
+​		</body>
+
+</html>
 
 
 
-<img src="Screenshot1" alt="Description of the image">
+
+
+
+
+
 
 
 
